<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context="fany.phpuijar.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_selected_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/selecteditem"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/selectedicon"
                android:textColor="@android:color/black"/>

            <ImageView
                android:id="@+id/tv_selected_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@android:color/white"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:checked="false"
            android:text="@string/disable_dimming"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_simple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/simpl_picklist" />

            <RadioButton
                android:id="@+id/rb_recommender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/recomm_picklist" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_picklist_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_picklist" />

        <EditText
            android:id="@+id/et_title_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Enter Title label"
            android:singleLine="true"
            android:textColor="@android:color/black" />

    </LinearLayout>

</RelativeLayout>
