<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:huixuegong="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fany.phpuijar.MainActivity" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/hidingcolorkey"/>

    <LinearLayout
        android:id="@+id/cb_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/red_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red_key" />

        <CheckBox
            android:id="@+id/green_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green_key" />

        <CheckBox
            android:id="@+id/yello_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow_key" />

        <CheckBox
            android:id="@+id/blue_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue_key" />

        <Button
            android:id="@+id/hide_btn"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/hide"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/appear_btn"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/appear"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/color_key_animate_btn"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/colorkey_animate"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_linear"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_red_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="Enter Red label"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray" />

            <Button
                android:id="@+id/red_submit_btn"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/str_submit"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_green_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="Enter Green label"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray" />

            <Button
                android:id="@+id/green_submit_btn"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/str_submit"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_yellow_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="Enter Yellow label"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray" />

            <Button
                android:id="@+id/yellow_btn"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/str_submit"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_blue_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="Enter Blue label"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray" />

            <Button
                android:id="@+id/blue_btn"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/str_submit"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>

    <ui.ColorKeys
        android:id="@+id/color_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp" />

</RelativeLayout>